tests/tests/snapshots/test__valibot__valibot-layout-namespaces.snap
---
source: tests/tests/valibot.rs
expression: rendered
---
import * as v from "valibot";
// This file has been generated by Specta's Valibot exporter. Do not edit this file manually.
const $spectaIsRecord = (input: unknown): input is Record<string, unknown> => {
	if (typeof input !== "object" || input === null || Array.isArray(input)) return false;
	const prototype = Object.getPrototypeOf(input);
	return prototype === Object.prototype || prototype === null;
};
const $spectaEncodeKey = (key: string) => `$specta$${key}`;
const $spectaDecodeKey = (key: string) => key.slice("$specta$".length);
const $spectaEncodeObject = (input: Record<string, unknown>) =>
	Object.fromEntries(Object.entries(input).map(([key, value]) => [$spectaEncodeKey(key), value]));
const $spectaDecodeObject = (input: Record<string, unknown>) =>
	Object.fromEntries(Object.entries(input).map(([key, value]) => [$spectaDecodeKey(key), value]));
const $spectaDeepEncode = (input: unknown): unknown =>
	Array.isArray(input)
		? input.map($spectaDeepEncode)
		: $spectaIsRecord(input)
			? Object.fromEntries(
					Object.entries(input).map(([key, value]) => [
						$spectaEncodeKey(key),
						$spectaDeepEncode(value),
					]),
				)
			: input;
const $spectaDeepDecode = (input: unknown): unknown =>
	Array.isArray(input)
		? input.map($spectaDeepDecode)
		: $spectaIsRecord(input)
			? Object.fromEntries(
					Object.entries(input).map(([key, value]) => [
						$spectaDecodeKey(key),
						$spectaDeepDecode(value),
					]),
				)
			: input;
function $spectaObject<const TEntries extends v.ObjectEntries>(entries: TEntries, strict = false) {
	const encodedEntries = Object.fromEntries(
		Object.entries(entries).map(([key, schema]) => [$spectaEncodeKey(key), schema]),
	) as TEntries;
	const schema = strict ? v.strictObject(encodedEntries) : v.object(encodedEntries);
	return v.pipe(
		v.custom<Record<string, unknown>>($spectaIsRecord),
		v.transform($spectaEncodeObject),
		schema,
		v.transform($spectaDecodeObject),
	) as unknown as v.GenericSchema<
		v.InferInput<v.ObjectSchema<TEntries, undefined>>,
		v.InferOutput<v.ObjectSchema<TEntries, undefined>>
	>;
}
function $spectaRecord<
	const TKey extends v.GenericSchema<string, string>,
	const TValue extends v.GenericSchema,
>(
	key: TKey,
	value: TValue,
): v.GenericSchema<
	v.InferInput<v.RecordSchema<TKey, TValue, undefined>>,
	v.InferOutput<v.RecordSchema<TKey, TValue, undefined>>
> {
	const encodedKey = v.pipe(v.string(), v.transform($spectaDecodeKey), key, v.transform($spectaEncodeKey));
	return v.pipe(
		v.custom<Record<string, unknown>>($spectaIsRecord),
		v.transform($spectaEncodeObject),
		v.record(encodedKey, value),
		v.transform($spectaDecodeObject),
	) as unknown as v.GenericSchema<
		v.InferInput<v.RecordSchema<TKey, TValue, undefined>>,
		v.InferOutput<v.RecordSchema<TKey, TValue, undefined>>
	>;
}
function $spectaFlattened<const TSchema extends v.GenericSchema>(
	schema: TSchema,
	excludedKeys: readonly string[],
): v.GenericSchema<v.InferInput<TSchema>, v.InferOutput<TSchema>> {
	const objectSchema = schema as v.GenericSchema<Record<string, unknown>>;
	return v.pipe(
		v.custom<Record<string, unknown>>($spectaIsRecord),
		v.transform((input) =>
			Object.fromEntries(Object.entries(input).filter(([key]) => !excludedKeys.includes(key))),
		),
		objectSchema,
	) as unknown as v.GenericSchema<v.InferInput<TSchema>, v.InferOutput<TSchema>>;
}
function $spectaIntersect<const TOptions extends v.IntersectOptions>(options: TOptions) {
	const encodedOptions = options.map((option) =>
		v.pipe(option, v.transform($spectaDeepEncode)),
	) as v.IntersectOptions;
	return v.pipe(
		v.intersect(encodedOptions),
		v.transform($spectaDeepDecode),
	) as unknown as v.GenericSchema<
		v.InferInput<v.IntersectSchema<TOptions, undefined>>,
		v.InferOutput<v.IntersectSchema<TOptions, undefined>>
	>;
}

namespace $s$ {

	export namespace test {

		export namespace valibot {
			export type Another = {
				bruh: string,
			};
			export const AnotherSchema: v.GenericSchema<Another> = $spectaObject({
				bruh: v.pipe(v.string(), v.check((value) => !/[\uD800-\uDFFF]/u.test(value))),
			});

			export type Testing = {
				a: $s$.test.valibot.testing.Testing,
			};
			export const TestingSchema: v.GenericSchema<Testing> = $spectaObject({
				a: v.lazy(() => $s$.test.valibot.testing.TestingSchema),
			});

			export namespace testing {
				/**  This documentation mentions test$valibot$testing.Testing verbatim. */
				export type Testing = {
					b: $s$.test.valibot.testing.testing2.Testing,
				};
				export const TestingSchema: v.GenericSchema<Testing> = $spectaObject({
					b: v.lazy(() => $s$.test.valibot.testing.testing2.TestingSchema),
				});

				export namespace testing2 {
					export type Testing = {
						c: string,
					};
					export const TestingSchema: v.GenericSchema<Testing> = $spectaObject({
						c: v.pipe(v.string(), v.check((value) => !/[\uD800-\uDFFF]/u.test(value))),
					});
				}
			}
		}
	}
}
export import test = $s$.test;
