tests/tests/snapshots/test__valibot__valibot-parity-coverage.snap
---
source: tests/tests/valibot.rs
expression: rendered
---
import * as v from "valibot";
// This file has been generated by Specta's Valibot exporter. Do not edit this file manually.
const $spectaIsRecord = (input: unknown): input is Record<string, unknown> => {
	if (typeof input !== "object" || input === null || Array.isArray(input)) return false;
	const prototype = Object.getPrototypeOf(input);
	return prototype === Object.prototype || prototype === null;
};
const $spectaEncodeKey = (key: string) => `$specta$${key}`;
const $spectaDecodeKey = (key: string) => key.slice("$specta$".length);
const $spectaEncodeObject = (input: Record<string, unknown>) =>
	Object.fromEntries(Object.entries(input).map(([key, value]) => [$spectaEncodeKey(key), value]));
const $spectaDecodeObject = (input: Record<string, unknown>) =>
	Object.fromEntries(Object.entries(input).map(([key, value]) => [$spectaDecodeKey(key), value]));
const $spectaDeepEncode = (input: unknown): unknown =>
	Array.isArray(input)
		? input.map($spectaDeepEncode)
		: $spectaIsRecord(input)
			? Object.fromEntries(
					Object.entries(input).map(([key, value]) => [
						$spectaEncodeKey(key),
						$spectaDeepEncode(value),
					]),
				)
			: input;
const $spectaDeepDecode = (input: unknown): unknown =>
	Array.isArray(input)
		? input.map($spectaDeepDecode)
		: $spectaIsRecord(input)
			? Object.fromEntries(
					Object.entries(input).map(([key, value]) => [
						$spectaDecodeKey(key),
						$spectaDeepDecode(value),
					]),
				)
			: input;
function $spectaObject<const TEntries extends v.ObjectEntries>(entries: TEntries, strict = false) {
	const encodedEntries = Object.fromEntries(
		Object.entries(entries).map(([key, schema]) => [$spectaEncodeKey(key), schema]),
	) as TEntries;
	const schema = strict ? v.strictObject(encodedEntries) : v.object(encodedEntries);
	return v.pipe(
		v.custom<Record<string, unknown>>($spectaIsRecord),
		v.transform($spectaEncodeObject),
		schema,
		v.transform($spectaDecodeObject),
	) as unknown as v.GenericSchema<
		v.InferInput<v.ObjectSchema<TEntries, undefined>>,
		v.InferOutput<v.ObjectSchema<TEntries, undefined>>
	>;
}
function $spectaRecord<
	const TKey extends v.GenericSchema<string, string>,
	const TValue extends v.GenericSchema,
>(
	key: TKey,
	value: TValue,
): v.GenericSchema<
	v.InferInput<v.RecordSchema<TKey, TValue, undefined>>,
	v.InferOutput<v.RecordSchema<TKey, TValue, undefined>>
> {
	const encodedKey = v.pipe(v.string(), v.transform($spectaDecodeKey), key, v.transform($spectaEncodeKey));
	return v.pipe(
		v.custom<Record<string, unknown>>($spectaIsRecord),
		v.transform($spectaEncodeObject),
		v.record(encodedKey, value),
		v.transform($spectaDecodeObject),
	) as unknown as v.GenericSchema<
		v.InferInput<v.RecordSchema<TKey, TValue, undefined>>,
		v.InferOutput<v.RecordSchema<TKey, TValue, undefined>>
	>;
}
function $spectaFlattened<const TSchema extends v.GenericSchema>(
	schema: TSchema,
	excludedKeys: readonly string[],
): v.GenericSchema<v.InferInput<TSchema>, v.InferOutput<TSchema>> {
	const objectSchema = schema as v.GenericSchema<Record<string, unknown>>;
	return v.pipe(
		v.custom<Record<string, unknown>>($spectaIsRecord),
		v.transform((input) =>
			Object.fromEntries(Object.entries(input).filter(([key]) => !excludedKeys.includes(key))),
		),
		objectSchema,
	) as unknown as v.GenericSchema<v.InferInput<TSchema>, v.InferOutput<TSchema>>;
}
function $spectaPick<const TSchema extends v.GenericSchema>(
	schema: TSchema,
	retainedKeys: readonly string[],
): v.GenericSchema<v.InferInput<TSchema>, v.InferOutput<TSchema>> {
	const objectSchema = schema as v.GenericSchema<Record<string, unknown>>;
	return v.pipe(
		v.custom<Record<string, unknown>>($spectaIsRecord),
		v.transform((input) =>
			Object.fromEntries(Object.entries(input).filter(([key]) => retainedKeys.includes(key))),
		),
		objectSchema,
	) as unknown as v.GenericSchema<v.InferInput<TSchema>, v.InferOutput<TSchema>>;
}
function $spectaIntersect<const TOptions extends v.IntersectOptions>(options: TOptions) {
	const encodedOptions = options.map((option) =>
		v.pipe(option, v.transform($spectaDeepEncode)),
	) as v.IntersectOptions;
	return v.pipe(
		v.intersect(encodedOptions),
		v.transform($spectaDeepDecode),
	) as unknown as v.GenericSchema<
		v.InferInput<v.IntersectSchema<TOptions, undefined>>,
		v.InferOutput<v.IntersectSchema<TOptions, undefined>>
	>;
}
export type AForwardReference = {
	later: ZLaterReference,
};
export const AForwardReferenceSchema: v.GenericSchema<AForwardReference> = $spectaObject({
	later: v.lazy(() => ZLaterReferenceSchema),
});

/**
 *  Top-level documentation containing a terminator: *\/ still remains valid.
 * @deprecated Use the replacement instead
 */
export type ValibotCoverage<T = string> = {
	/**
	 *  Field documentation.
	 * @deprecated Use `renamed` instead
	 */
	"quote\"slash\\line\nseparator": string,
	generic: T,
	optional: boolean | null,
	tuple: [number, string],
	list: (number | null)[],
	map: { [key in string]: number },
};
export function ValibotCoverageSchema(): v.GenericSchema<ValibotCoverage, ValibotCoverage>;
export function ValibotCoverageSchema<T extends v.GenericSchema>(T: T): v.GenericSchema<ValibotCoverage<v.InferInput<T>>, ValibotCoverage<v.InferOutput<T>>>;
export function ValibotCoverageSchema(T: v.GenericSchema = v.pipe(v.string(), v.check((value) => !/[\uD800-\uDFFF]/u.test(value)))): v.GenericSchema<any> {
	return $spectaObject({
	"quote\"slash\\line\nseparator": v.pipe(v.string(), v.check((value) => !/[\uD800-\uDFFF]/u.test(value))),
	generic: T,
	optional: v.nullable(v.boolean()),
	tuple: v.strictTuple([v.pipe(v.number(), v.integer(), v.minValue(-2147483648), v.maxValue(2147483647)), v.pipe(v.string(), v.check((value) => !/[\uD800-\uDFFF]/u.test(value)))]),
	list: v.array(v.nullable(v.pipe(v.number(), v.finite()))),
	map: $spectaRecord(v.pipe(v.string(), v.check((value) => !/[\uD800-\uDFFF]/u.test(value))), v.pipe(v.number(), v.integer(), v.minValue(0), v.maxValue(65535))),
});
}

export type ValibotEnumCoverage =
/**  Unit documentation. */
"Unit" | ({ Newtype: string }) & { Named?: never; Tuple?: never } | ({ Tuple: [number, boolean] }) & { Named?: never; Newtype?: never } | ({ Named: {
	/**  Nested field documentation. */
	value: string,
} }) & { Newtype?: never; Tuple?: never };
export const ValibotEnumCoverageSchema: v.GenericSchema<ValibotEnumCoverage> = v.union([v.literal("Unit"), $spectaObject({
	Newtype: v.pipe(v.string(), v.check((value) => !/[\uD800-\uDFFF]/u.test(value))),
}, true), $spectaObject({
	Tuple: v.strictTuple([v.pipe(v.number(), v.integer(), v.minValue(-2147483648), v.maxValue(2147483647)), v.boolean()]),
}, true), $spectaObject({
	Named: $spectaObject({
	value: v.pipe(v.string(), v.check((value) => !/[\uD800-\uDFFF]/u.test(value))),
}),
}, true)]);

export type ValibotFiniteKey = "First" | "Second";
export const ValibotFiniteKeySchema: v.GenericSchema<ValibotFiniteKey> = v.union([v.literal("First"), v.literal("Second")]);

export type ValibotFlattenInner = {
	inner: string,
};
export const ValibotFlattenInnerSchema: v.GenericSchema<ValibotFlattenInner> = $spectaObject({
	inner: v.pipe(v.string(), v.check((value) => !/[\uD800-\uDFFF]/u.test(value))),
});

export type ValibotFlattenOuter = {
	outer: boolean,
} & ValibotFlattenInner;
export const ValibotFlattenOuterSchema: v.GenericSchema<ValibotFlattenOuter> = $spectaIntersect([$spectaObject({
	outer: v.boolean(),
}), v.lazy(() => ValibotFlattenInnerSchema)]);

export type ValibotGenericDefaults<T = string, U = T> = {
	first: T,
	second: U,
};
export function ValibotGenericDefaultsSchema(): v.GenericSchema<ValibotGenericDefaults, ValibotGenericDefaults>;
export function ValibotGenericDefaultsSchema<T extends v.GenericSchema>(T: T): v.GenericSchema<ValibotGenericDefaults<v.InferInput<T>>, ValibotGenericDefaults<v.InferOutput<T>>>;
export function ValibotGenericDefaultsSchema<T extends v.GenericSchema, U extends v.GenericSchema>(T: T, U: U): v.GenericSchema<ValibotGenericDefaults<v.InferInput<T>, v.InferInput<U>>, ValibotGenericDefaults<v.InferOutput<T>, v.InferOutput<U>>>;
export function ValibotGenericDefaultsSchema(T: v.GenericSchema = v.pipe(v.string(), v.check((value) => !/[\uD800-\uDFFF]/u.test(value))), U: v.GenericSchema = T): v.GenericSchema<any> {
	return $spectaObject({
	first: T,
	second: U,
});
}

export type ValibotIntegerKey = number;
export const ValibotIntegerKeySchema: v.GenericSchema<ValibotIntegerKey> = v.pipe(v.number(), v.integer(), v.minValue(-2147483648), v.maxValue(2147483647));

export type ValibotOptionalFlatten = {
	id: string,
} & ValibotFlattenInner | {
	id: string,
};
export const ValibotOptionalFlattenSchema: v.GenericSchema<ValibotOptionalFlatten> = v.union([$spectaIntersect([$spectaObject({
	id: v.pipe(v.string(), v.check((value) => !/[\uD800-\uDFFF]/u.test(value))),
}), v.lazy(() => ValibotFlattenInnerSchema)]), $spectaIntersect([$spectaObject({
	id: v.pipe(v.string(), v.check((value) => !/[\uD800-\uDFFF]/u.test(value))),
}), $spectaObject({
	inner: v.optional(v.never()),
})])]);

export type ValibotWireTypes = {
	character: string,
	integer_keys: { [key in number]: string },
	boolean_keys: Partial<{ [key in "true" | "false"]: string }>,
	newtype_keys: { [key in number]: string },
	enum_keys: Partial<{ [key in "First" | "Second"]: string }>,
};
export const ValibotWireTypesSchema: v.GenericSchema<ValibotWireTypes> = $spectaObject({
	character: v.pipe(v.string(), v.check((value) => [...value].length === 1 && (value.length !== 1 || value.charCodeAt(0) < 0xd800 || value.charCodeAt(0) > 0xdfff))),
	integer_keys: $spectaRecord(v.pipe(v.string(), v.regex(/^-?\d+$/), v.check((value) => Number(value) >= -2147483648 && Number(value) <= 2147483647)), v.pipe(v.string(), v.check((value) => !/[\uD800-\uDFFF]/u.test(value)))),
	boolean_keys: $spectaRecord(v.picklist(["true", "false"]), v.pipe(v.string(), v.check((value) => !/[\uD800-\uDFFF]/u.test(value)))),
	newtype_keys: $spectaRecord(v.pipe(v.string(), v.regex(/^-?\d+$/), v.check((value) => Number(value) >= -2147483648 && Number(value) <= 2147483647)), v.pipe(v.string(), v.check((value) => !/[\uD800-\uDFFF]/u.test(value)))),
	enum_keys: $spectaRecord(v.union([v.literal("First"), v.literal("Second")]), v.pipe(v.string(), v.check((value) => !/[\uD800-\uDFFF]/u.test(value)))),
});

export type ZLaterReference = {
	value: string,
};
export const ZLaterReferenceSchema: v.GenericSchema<ZLaterReference> = $spectaObject({
	value: v.pipe(v.string(), v.check((value) => !/[\uD800-\uDFFF]/u.test(value))),
});
