tests/tests/snapshots/test__valibot__valibot-tuple-default-phases.snap
---
source: tests/tests/valibot.rs
expression: rendered
---
import * as v from "valibot";
// This file has been generated by Specta's Valibot exporter. Do not edit this file manually.
const $spectaIsRecord = (input: unknown): input is Record<string, unknown> => {
	if (typeof input !== "object" || input === null || Array.isArray(input)) return false;
	const prototype = Object.getPrototypeOf(input);
	return prototype === Object.prototype || prototype === null;
};
const $spectaEncodeKey = (key: string) => `$specta$${key}`;
const $spectaDecodeKey = (key: string) => key.slice("$specta$".length);
const $spectaEncodeObject = (input: Record<string, unknown>) =>
	Object.fromEntries(Object.entries(input).map(([key, value]) => [$spectaEncodeKey(key), value]));
const $spectaDecodeObject = (input: Record<string, unknown>) =>
	Object.fromEntries(Object.entries(input).map(([key, value]) => [$spectaDecodeKey(key), value]));
const $spectaDeepEncode = (input: unknown): unknown =>
	Array.isArray(input)
		? input.map($spectaDeepEncode)
		: $spectaIsRecord(input)
			? Object.fromEntries(
					Object.entries(input).map(([key, value]) => [
						$spectaEncodeKey(key),
						$spectaDeepEncode(value),
					]),
				)
			: input;
const $spectaDeepDecode = (input: unknown): unknown =>
	Array.isArray(input)
		? input.map($spectaDeepDecode)
		: $spectaIsRecord(input)
			? Object.fromEntries(
					Object.entries(input).map(([key, value]) => [
						$spectaDecodeKey(key),
						$spectaDeepDecode(value),
					]),
				)
			: input;
function $spectaObject<const TEntries extends v.ObjectEntries>(entries: TEntries, strict = false) {
	const encodedEntries = Object.fromEntries(
		Object.entries(entries).map(([key, schema]) => [$spectaEncodeKey(key), schema]),
	) as TEntries;
	const schema = strict ? v.strictObject(encodedEntries) : v.object(encodedEntries);
	return v.pipe(
		v.custom<Record<string, unknown>>($spectaIsRecord),
		v.transform($spectaEncodeObject),
		schema,
		v.transform($spectaDecodeObject),
	) as unknown as v.GenericSchema<
		v.InferInput<v.ObjectSchema<TEntries, undefined>>,
		v.InferOutput<v.ObjectSchema<TEntries, undefined>>
	>;
}
function $spectaRecord<
	const TKey extends v.GenericSchema<string, string>,
	const TValue extends v.GenericSchema,
>(
	key: TKey,
	value: TValue,
): v.GenericSchema<
	v.InferInput<v.RecordSchema<TKey, TValue, undefined>>,
	v.InferOutput<v.RecordSchema<TKey, TValue, undefined>>
> {
	const encodedKey = v.pipe(v.string(), v.transform($spectaDecodeKey), key, v.transform($spectaEncodeKey));
	return v.pipe(
		v.custom<Record<string, unknown>>($spectaIsRecord),
		v.transform($spectaEncodeObject),
		v.record(encodedKey, value),
		v.transform($spectaDecodeObject),
	) as unknown as v.GenericSchema<
		v.InferInput<v.RecordSchema<TKey, TValue, undefined>>,
		v.InferOutput<v.RecordSchema<TKey, TValue, undefined>>
	>;
}
function $spectaIntersect<const TOptions extends v.IntersectOptions>(options: TOptions) {
	const encodedOptions = options.map((option) =>
		v.pipe(option, v.transform($spectaDeepEncode)),
	) as v.IntersectOptions;
	return v.pipe(
		v.intersect(encodedOptions),
		v.transform($spectaDeepDecode),
	) as unknown as v.GenericSchema<
		v.InferInput<v.IntersectSchema<TOptions, undefined>>,
		v.InferOutput<v.IntersectSchema<TOptions, undefined>>
	>;
}
/**
 *  A trailing `#[serde(default)]` tuple element is optional on deserialize
 *  (serde accepts `[1]`): the deserialize half must render
 *  a union of exact-length strict tuples.
 */
export type ValibotTupleDefault = ValibotTupleDefault_Serialize | ValibotTupleDefault_Deserialize;
export const ValibotTupleDefaultSchema: v.GenericSchema<ValibotTupleDefault> = v.union([v.lazy(() => ValibotTupleDefault_SerializeSchema), v.lazy(() => ValibotTupleDefault_DeserializeSchema)]);

/**
 *  A trailing `#[serde(default)]` tuple element is optional on deserialize
 *  (serde accepts `[1]`): the deserialize half must render
 *  a union of exact-length strict tuples.
 */
export type ValibotTupleDefault_Deserialize = [number, number?];
export const ValibotTupleDefault_DeserializeSchema: v.GenericSchema<ValibotTupleDefault_Deserialize> = v.union([v.strictTuple([v.pipe(v.number(), v.integer(), v.minValue(0), v.maxValue(255))]), v.strictTuple([v.pipe(v.number(), v.integer(), v.minValue(0), v.maxValue(255)), v.pipe(v.number(), v.integer(), v.minValue(0), v.maxValue(255))])]);

/**
 *  A trailing `#[serde(default)]` tuple element is optional on deserialize
 *  (serde accepts `[1]`): the deserialize half must render
 *  a union of exact-length strict tuples.
 */
export type ValibotTupleDefault_Serialize = [number, number];
export const ValibotTupleDefault_SerializeSchema: v.GenericSchema<ValibotTupleDefault_Serialize> = v.strictTuple([v.pipe(v.number(), v.integer(), v.minValue(0), v.maxValue(255)), v.pipe(v.number(), v.integer(), v.minValue(0), v.maxValue(255))]);
